--- a/booking-app/src/style/scss/_0-settings.colors.scss
+++ b/booking-app/src/style/scss/_0-settings.colors.scss
@@ -9,6 +9,8 @@
 
 $brand-color: #7b00b1; // I had to put this here to stop an error on compiling, try to fix this
 
+$color-navbar: #1660a1;
+
 $color-brand: $brand-color;
 $color-pink: $color-brand;
 $color-gray: #333;
