Booking app further development. Homepage and Hotel list page

--- a/booking-app/src/style/scss/_0-main.scss
+++ b/booking-app/src/style/scss/_0-main.scss
@@ -135,3 +135,8 @@ $inuit-offsets: true;
 
 // APP SPECIFIC
 @import "app.scss";
+@import "searchItem.scss";
+@import "PropertyList.scss";
+@import "FeaturedProperties.scss";
+@import "mailList.scss";
+@import "list.scss";
